glib2.0 (2.13.5-2) UNRELEASED; urgency=low

  * Don't pass -L to dh_shlibdeps as the shlibs.local trick is enough and this
    can result in duplicate deps; closes: #317461.
  * Set myself as maintainer.
  * Cleanups.

 -- Loic Minier <lool@dooz.org>  Thu, 28 Jun 2007 16:15:44 +0200

glib2.0 (2.13.5-1) experimental; urgency=low

  * New upstream release
   - Bump shlibs to >= 2.13.5, as the API was changed

 -- Marc 'HE' Brockschmidt <he@debian.org>  Tue, 19 Jun 2007 16:14:16 +0200

glib2.0 (2.13.4-2) experimental; urgency=low

  * New patch, 67_gcc43-inline, fixes FTBFS of apps using glib with GCC 4.3
    which uses C99 where the meaning of "inline" changed; patch was adapted
    from patches in GNOME #315437 and Gentoo #156475; closes: #416863.

 -- Loic Minier <lool@dooz.org>  Sat, 16 Jun 2007 18:49:57 +0200

glib2.0 (2.13.4-1) experimental; urgency=low

  * Also honor parallel=n in DEB_BUILD_OPTIONS.
  * New upstream release series; these are development releases, the new API
    may still change incompatibly.
    - Target at experimental; include check-dist.
    - Bump up shlibs to >= 2.13.4.
  * New patch but disabled, 01_gettext-desktopfiles, permits overriding the
    gettext domain when desktop files have such a field; found in the Ubuntu
    package.

 -- Loic Minier <lool@dooz.org>  Wed, 13 Jun 2007 10:52:27 +0200

glib2.0 (2.12.12-1) unstable; urgency=low

  * Fix description of the -dbg package.
  * New upstream release.

 -- Loic Minier <lool@dooz.org>  Thu, 03 May 2007 19:14:33 +0200

glib2.0 (2.12.11-3) unstable; urgency=medium

  * Initialize CFLAGS to -Wall -g; pass debian/rules' CFLAGS and LDFLAGS to
    configure, doh!
  * Track all stable versions in watch file.
  * Wrap build-deps and deps.
  * Add ${misc:Depends}.
  * New patch 60_output-lines-during-tests, outputs newlines after thousand
    iterations of the inner-loop of the closures test to avoid the timeout on
    mips and mipsel buildds.
